--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.4 【今日阅读】https://building.nubank.com.br/why-we-killed-our-end-to-end-test-suite/ Most companies still believe that End-to-End Integration Tests are the best way to catch bugs. But they also experience a progressively slow down of value delivery due to these pain points that we uncovered during the assessment
+
 1.3 【今日阅读】https://go.googlesource.com/proposal/+/master/design/draft-fuzzing.md The seed corpus is the user-specified set of inputs to a fuzz test which will be run by default with go test. These should be composed of meaningful inputs to test the behavior of the package, as well as a set of regression inputs for any newly discovered bugs identified by the fuzzing engine. This set of inputs is also used to “seed” the corpus used by the fuzzing engine when mutating inputs to discover new code coverage. A good seed corpus can save the mutation engine a lot of work (for example adding a new key type to a key parsing function).
 
 1.2 【今日阅读】https://fasterthanli.me/articles/why-is-my-rust-build-so-slow 使用 https://ui.perfetto.dev/ 分析 rust 构建为啥这么慢
