--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.6 【今日阅读】https://stackoverflow.blog/2022/01/03/favor-real-dependencies-for-unit-testing/ A functional core needs no dependency injection to support unit testing, because functions are always testable (being deterministic by definition). Only the imperative shell needs dependency injection to support unit testing.
+
 1.5 【今日阅读】https://www.technovelty.org/code/why-symbol-visibility-is-good.html ELF provides for visibility attributes. Symbols can be default, protected, hidden or internal. Using these attributes, we can flag extra information for the dynamic loader so it can know which symbols are for public consumption, and which are for internal use only.
 
 1.4 【今日阅读】https://building.nubank.com.br/why-we-killed-our-end-to-end-test-suite/ Most companies still believe that End-to-End Integration Tests are the best way to catch bugs. But they also experience a progressively slow down of value delivery due to these pain points that we uncovered during the assessment
