--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.7 【今日阅读】https://blog.ploeh.dk/2017/10/04/from-design-patterns-to-category-theory/ I believe that learning about these universal abstractions is the next step in software design. If you know design patterns, you have a vocabulary, but the details are still open to interpretation. If you know category theory, you have a better vocabulary. Just like design patterns, you have to learn these things, but once you've learned them, you've learned something that transcends a particular software library, a particular framework, a particular programming language.
+
 1.6 【今日阅读】https://stackoverflow.blog/2022/01/03/favor-real-dependencies-for-unit-testing/ A functional core needs no dependency injection to support unit testing, because functions are always testable (being deterministic by definition). Only the imperative shell needs dependency injection to support unit testing.
 
 1.5 【今日阅读】https://www.technovelty.org/code/why-symbol-visibility-is-good.html ELF provides for visibility attributes. Symbols can be default, protected, hidden or internal. Using these attributes, we can flag extra information for the dynamic loader so it can know which symbols are for public consumption, and which are for internal use only.
