--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.11 【今日阅读】https://lobste.rs/s/pydtol/dev_corrupts_npm_libs_colors_faker Commit package-lock.json like all of the documentation tells you to, and don’t auto-update dependencies without running CI.
+
 1.10 【今日阅读】https://zhuanlan.zhihu.com/p/446376560 如果某个版本 (Sprint) 交付的东西, 并没有真实地投入到 Real World 里去使用, 去试错, 去收集反馈, 而只是给老板或者产品经理进行了演示, 那么他其实并不是一次合格的敏捷实践.
 
 1.9 【今日阅读】https://bellmar.medium.com/hunting-tech-debt-via-org-charts-92df0b253145 Knowing where to look for problems by figuring out who reports up to whom
