--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.13 【今日阅读】https://dev.to/xba/data-oriented-programming-is-dope-ma2 Joe understands affirms that is "feelings" are due to « Data encapsulation has its merits and drawbacks: Think about the way you designed the Library Management System. According to DOP, the main cause of the complexity of systems and their lack of flexibility is because code and data are mixed together in objects »
+
 1.12 【今日阅读】https://www.youtube.com/watch?v=sIBrFuzR3cs Martin Thompson On How To Manage Software Complexity
 
 1.11 【今日阅读】https://lobste.rs/s/pydtol/dev_corrupts_npm_libs_colors_faker Commit package-lock.json like all of the documentation tells you to, and don’t auto-update dependencies without running CI.
