--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.16 【今日阅读】https://en.wikipedia.org/wiki/Self-determination_theory#Basic_psychological_needs Autonomy Competence Relatedness
+
 1.15 【今日阅读】http://neugierig.org/software/blog/2022/01/rethinking-errors.html The lack of adequate hooks in the other direction, from the developer into the toolchain, is also an explanation for the existence of "lint" tools. In my experience tools named "lint" often end up being a grab-bag of "all the checks we wanted but that weren't enforced by the language already", which can vary from trivial guidelines all the way up to really important invariants.
 
 1.14 【今日阅读】https://mp.weixin.qq.com/s/Ip20EvxqHKB5S0fXY80qpA DDD 的三层含义：协作、架构与实现
