--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.17 【今日阅读】https://zhuanlan.zhihu.com/p/456483953 本文主要面向前端 、Node.js 开发者，业务中使用 Monorepo 组织 应用 和 模块，抛砖引玉探讨下：怎样设计一个共享配置包（配置、类型、utils、枚举），同时在前端、Node.js、Vite 等项目中使用。UI 组件库怎么打包？组件库怎么支持服务端渲染（SSR）？有哪些好的最佳实践？怎么使用原生语言（Rust / C++ / Golang 等）编写的模块包？
+
 1.16 【今日阅读】https://en.wikipedia.org/wiki/Self-determination_theory#Basic_psychological_needs Autonomy Competence Relatedness
 
 1.15 【今日阅读】http://neugierig.org/software/blog/2022/01/rethinking-errors.html The lack of adequate hooks in the other direction, from the developer into the toolchain, is also an explanation for the existence of "lint" tools. In my experience tools named "lint" often end up being a grab-bag of "all the checks we wanted but that weren't enforced by the language already", which can vary from trivial guidelines all the way up to really important invariants.
