--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.20 【今日阅读】https://www.youtube.com/watch?v=J0p_thJJnoo Francois Chollet - Intelligence and Generalisation
+
 1.19 【今日阅读】https://www.lei.chat/posts/compilers-and-irs-llvm-ir-spirv-and-mlir/#decoupling-and-modularizing-compilers The most important thing LLVM brings is the practice of decoupling and modularization. The plethora of wonderful libraries and tools built around LLVM is just a natural result of that.
 
 1.18 【今日阅读】https://www.swift.org/documentation/api-design-guidelines/ swift API Design Guidelines
