--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.23 【今日阅读】https://lobste.rs/s/bthzfk/webassembly_new_kubernetes webassembly: the new kubernetes?
+
 1.22 【今日阅读】https://www.yuque.com/seeconf/2022/oywl8m 一种秒级安装 npm 的方式
 
 1.21 【今日阅读】https://research.facebook.com/publications/holistic-configuration-management-at-facebook/ Facebook’s configuration end-to-end, including the frontend products, backend systems, and mobile apps.
