--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.24 【今日阅读】https://www.fuzzingbook.org/ This book addresses this problem by automating software testing, specifically by generating tests automatically. Recent years have seen the development of novel techniques that lead to dramatic improvements in test generation and software testing. They now are mature enough to be assembled in a book – even with executable code.
+
 1.23 【今日阅读】https://lobste.rs/s/bthzfk/webassembly_new_kubernetes webassembly: the new kubernetes?
 
 1.22 【今日阅读】https://www.yuque.com/seeconf/2022/oywl8m 一种秒级安装 npm 的方式
