--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.27 【今日阅读】https://catern.com/change_code.html There are some basic technical excuses one might give for why you aren't able to change the code
+
 1.26 【今日阅读】https://www.brandons.me/blog/write-code-not-too-much-mostly-functions Eat food. Not too much. Mostly plants.
 
 1.25 【今日阅读】http://akkartik.name/post/division-of-labor Ten years against division of labor in software
