--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.29 【今日阅读】https://www.steveonstuff.com/2022/01/27/no-such-thing-as-clean-code you need _____ code. It’s up to you to fill in that blank with words that describe what your project requires
+
 1.28 【今日阅读】https://remix.run/blog/not-another-framework They don't use [the framework we're using], so everything I learned the last two years here doesn't even matter!
 
 1.27 【今日阅读】https://catern.com/change_code.html There are some basic technical excuses one might give for why you aren't able to change the code
