--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.30 【今日阅读】https://eli.thegreenplace.net/2022/rust-extension-traits-greppability-and-ides/ It's entirely possible that using a language like Rust without a sophisticated IDE is madness, and I'm somewhat stuck in the past. But I have to say, I do lament the loss of greppability. There's something very universal about being able to understand a project using only grep and the official documentation.
+
 1.29 【今日阅读】https://www.steveonstuff.com/2022/01/27/no-such-thing-as-clean-code you need _____ code. It’s up to you to fill in that blank with words that describe what your project requires
 
 1.28 【今日阅读】https://remix.run/blog/not-another-framework They don't use [the framework we're using], so everything I learned the last two years here doesn't even matter!
