--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+2.8 【今日阅读】GitHub - stepchowfun/tagref: Tagref helps you maintain cross-references in your code. Tagref helps you maintain cross-references in your code. works with any programming language, and it respects your .gitignore file as well as other common filter files.
+
+2.7 【今日阅读】https://solnic.codes/2022/02/02/rails-and-its-ruby-dialect/ Rails is not written in Ruby
+
 1.30 【今日阅读】https://eli.thegreenplace.net/2022/rust-extension-traits-greppability-and-ides/ It's entirely possible that using a language like Rust without a sophisticated IDE is madness, and I'm somewhat stuck in the past. But I have to say, I do lament the loss of greppability. There's something very universal about being able to understand a project using only grep and the official documentation.
 
 1.29 【今日阅读】https://www.steveonstuff.com/2022/01/27/no-such-thing-as-clean-code you need _____ code. It’s up to you to fill in that blank with words that describe what your project requires
