--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,4 +1,4 @@
-2.8 【今日阅读】GitHub - stepchowfun/tagref: Tagref helps you maintain cross-references in your code. Tagref helps you maintain cross-references in your code. works with any programming language, and it respects your .gitignore file as well as other common filter files.
+2.8 【今日阅读】https://github.com/stepchowfun/tagref helps you maintain cross-references in your code. Tagref helps you maintain cross-references in your code. works with any programming language, and it respects your .gitignore file as well as other common filter files.
 
 2.7 【今日阅读】https://solnic.codes/2022/02/02/rails-and-its-ruby-dialect/ Rails is not written in Ruby
 
