--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+2.9 【今日阅读】https://lobste.rs/s/if8hle/have_you_found_side_effects_problem_by Have you found side-effects a problem by increasing complexity in your code bases? 
+
 2.8 【今日阅读】https://github.com/stepchowfun/tagref helps you maintain cross-references in your code. Tagref helps you maintain cross-references in your code. works with any programming language, and it respects your .gitignore file as well as other common filter files.
 
 2.7 【今日阅读】https://solnic.codes/2022/02/02/rails-and-its-ruby-dialect/ Rails is not written in Ruby
