--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,11 @@
+2.13 【今日阅读】https://pointersgonewild.com/2022/02/11/code-that-doesnt-rot/ I used to work in a deep learning research lab, and I’ve seen cases where researchers had published code just six months ago, but one or more of the dependencies on which they relied had since made breaking changes. That put us in the unfortunate position of having to troubleshoot someone else’s code. 
+
+2.12 【今日阅读】https://itnext.io/reflecting-business-logic-rules-into-the-domain-models-using-typescript-part-1-e696773ae4ae 使用静态类型系统表达domain specific的运行时数据约束。所谓业务逻辑，就是一堆对数据的约束规则。把部分规则的教研从运行时转移到编译期用类型系统来表示有利于减轻代码阅读者的认知负担。
+
+2.11 【今日阅读】https://fosdem.org/2022/schedule/event/go_errors/ Handle errors properly by thinking about their roles and domain within your application
+
+2.10 【今日阅读】https://datastation.multiprocess.io/blog/2022-02-08-the-world-of-postgresql-wire-compatibility.html the wire protocols for open-source databases tend to be documented since it's just another part of an open-source system
+
 2.9 【今日阅读】https://lobste.rs/s/if8hle/have_you_found_side_effects_problem_by Have you found side-effects a problem by increasing complexity in your code bases? 
 
 2.8 【今日阅读】https://github.com/stepchowfun/tagref helps you maintain cross-references in your code. Tagref helps you maintain cross-references in your code. works with any programming language, and it respects your .gitignore file as well as other common filter files.
