--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+2.14 【今日阅读】https://www.ietf.org/archive/id/draft-iab-protocol-maintenance-05.html Protocol decay is a real pain. If you need to write an HTTP/1.1 proxy that is compatible with everything thrown at browsers, you can write 99% of the parser in a day, and then spend a year chasing WTF edge cases and horribly broken servers that you still have to entertain, because their garbage happens to work in browsers that accumulated decades of workarounds.
+
 2.13 【今日阅读】https://pointersgonewild.com/2022/02/11/code-that-doesnt-rot/ I used to work in a deep learning research lab, and I’ve seen cases where researchers had published code just six months ago, but one or more of the dependencies on which they relied had since made breaking changes. That put us in the unfortunate position of having to troubleshoot someone else’s code. 
 
 2.12 【今日阅读】https://itnext.io/reflecting-business-logic-rules-into-the-domain-models-using-typescript-part-1-e696773ae4ae 使用静态类型系统表达domain specific的运行时数据约束。所谓业务逻辑，就是一堆对数据的约束规则。把部分规则的教研从运行时转移到编译期用类型系统来表示有利于减轻代码阅读者的认知负担。
