--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+2.16 【今日阅读】https://brooker.co.za/blog/2022/01/31/deployments.html There are two hidden assumptions in the section above: problems happen (or become visible) some time after deployment, and that time is short enough that waiting between deployments will catch a significant proportion of problems. These assumptions lead to three of the biggest controversies in this space: how fast to move, how to measure speed, and the Friday question.
+
 2.15 【今日阅读】https://gist.github.com/ttsiodras/e59c5ea4090a11f69073dcc10809d647 使用 affine type 类型检查表达业务逻辑上的状态约束 https://mariusschulz.com/blog/assertion-functions-in-typescript 使用 NonNullable 推断。共同点就是让开发者用更少的“标记工作量”达到静态检查业务逻辑约束的目的。
 
 2.14 【今日阅读】https://www.ietf.org/archive/id/draft-iab-protocol-maintenance-05.html Protocol decay is a real pain. If you need to write an HTTP/1.1 proxy that is compatible with everything thrown at browsers, you can write 99% of the parser in a day, and then spend a year chasing WTF edge cases and horribly broken servers that you still have to entertain, because their garbage happens to work in browsers that accumulated decades of workarounds.
