--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+2.18 【今日阅读】https://www.youtube.com/watch?v=0yX8wGCzWNs Leverage vs. Autonomy in a Large Software System
+
 2.17 【今日阅读】https://buttondown.email/hillelwayne/archive/why-you-should-read-data-and-reality/ we are not modeling reality, but the way information about reality is processed, by people
 
 2.16 【今日阅读】https://brooker.co.za/blog/2022/01/31/deployments.html There are two hidden assumptions in the section above: problems happen (or become visible) some time after deployment, and that time is short enough that waiting between deployments will catch a significant proportion of problems. These assumptions lead to three of the biggest controversies in this space: how fast to move, how to measure speed, and the Friday question.
