--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+2.19 【今日阅读】https://verdagon.dev/blog/seamless-fearless-structured-concurrency Seamless, Fearless, and Structured Concurrency
+
 2.18 【今日阅读】https://www.youtube.com/watch?v=0yX8wGCzWNs Leverage vs. Autonomy in a Large Software System
 
 2.17 【今日阅读】https://buttondown.email/hillelwayne/archive/why-you-should-read-data-and-reality/ we are not modeling reality, but the way information about reality is processed, by people
