--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+2.20 【今日阅读】https://turborepo.org/docs/features/remote-caching 这就是为啥 vercel 要收购 turborepo，通过 remote caching 加速 monorepo 的构建速度
+
 2.19 【今日阅读】https://verdagon.dev/blog/seamless-fearless-structured-concurrency Seamless, Fearless, and Structured Concurrency
 
 2.18 【今日阅读】https://www.youtube.com/watch?v=0yX8wGCzWNs Leverage vs. Autonomy in a Large Software System
