--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+2.22 【今日阅读】https://jasonformat.com/islands-architecture/ render HTML pages on the server, and inject placeholders or slots around highly dynamic regions
+
 2.21 【今日阅读】https://lobste.rs/s/nwjjfo/what_is_software_engineering Software engineering is what happens to programming when you add time and other programmers.
 
 2.20 【今日阅读】https://turborepo.org/docs/features/remote-caching 这就是为啥 vercel 要收购 turborepo，通过 remote caching 加速 monorepo 的构建速度
