--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+2.23 【今日阅读】https://belkadan.com/blog/2022/02/Dynamic-Linking-and-Static-Linking/ Dynamic Linking Is Bad For Apps And Static Linking Is Also Bad For Apps
+
 2.22 【今日阅读】https://jasonformat.com/islands-architecture/ render HTML pages on the server, and inject placeholders or slots around highly dynamic regions
 
 2.21 【今日阅读】https://lobste.rs/s/nwjjfo/what_is_software_engineering Software engineering is what happens to programming when you add time and other programmers.
