--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+2.25 【今日阅读】https://blog.laurentcharignon.com/post/data-oriented-programming/ Yehonathan Sharvit popularized the term Data-Oriented Programming to encompass a set of principles that make it easier to grow a codebase. While none of those principles are novel, they are not mainstream in the industry, and they indeed make it far easier to work with code.
+
 2.24 【今日阅读】https://blog.nelhage.com/post/why-sorbet-is-fast/ https://blog.nelhage.com/post/record-replay-in-sorbet/ Sorbet is a fast, powerful type checker designed for Ruby written in C++
 
 2.23 【今日阅读】https://belkadan.com/blog/2022/02/Dynamic-Linking-and-Static-Linking/ Dynamic Linking Is Bad For Apps And Static Linking Is Also Bad For Apps
