--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+2.26 【今日阅读】https://martinfowler.com/articles/lean-inception/ An inception is an activity done at the start of a project to gather together the people involved and set a common direction and working style for the on-going work. The lean inception is a focused form of inception, which can be done in a single week. During this time we understand the key features and customers for the product, and build a canvas to formulate the characteristics of a Minimum Viable Product.
+
 2.25 【今日阅读】https://blog.laurentcharignon.com/post/data-oriented-programming/ Yehonathan Sharvit popularized the term Data-Oriented Programming to encompass a set of principles that make it easier to grow a codebase. While none of those principles are novel, they are not mainstream in the industry, and they indeed make it far easier to work with code.
 
 2.24 【今日阅读】https://blog.nelhage.com/post/why-sorbet-is-fast/ https://blog.nelhage.com/post/record-replay-in-sorbet/ Sorbet is a fast, powerful type checker designed for Ruby written in C++
