--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.2 【今日阅读】https://embeddeduse.com/2022/03/01/visualising-module-dependencies-with-cmake-and-graphviz/ Visualising Module Dependencies with CMake and Graphviz
+
 3.1 【今日阅读】https://arxiv.org/pdf/2010.12149.pdf Fuzzing is one of the most effective technique to identify potential software vulnerabilities. Most of the fuzzers aim to improve the code coverage, and there is lack of directedness (e.g., fuzz the specified path in a software).
 
 2.28 【今日阅读】https://zhuanlan.zhihu.com/p/473388657 上 micro-frontend？大可不必。如果只是为了强制代码的模块化，完全不需要上 micro-frontend 这样的重型运行时方案，typescript+vite 在代码构建阶段就能把这个事给办了。
