--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.3 【今日阅读】https://riffle.systems/essays/prelude/ We’re exploring a new way to manage data in apps by storing all app state—including the state of the UI—in a single reactive database. Instead of imperatively fetching data from the database, the user writes reactive queries that update with fresh results whenever their dependencies change.
+
 3.2 【今日阅读】https://embeddeduse.com/2022/03/01/visualising-module-dependencies-with-cmake-and-graphviz/ Visualising Module Dependencies with CMake and Graphviz
 
 3.1 【今日阅读】https://arxiv.org/pdf/2010.12149.pdf Fuzzing is one of the most effective technique to identify potential software vulnerabilities. Most of the fuzzers aim to improve the code coverage, and there is lack of directedness (e.g., fuzz the specified path in a software).
