--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.5 【今日阅读】https://martinfowler.com/articles/feature-toggles.html Release Toggles / Experiment Toggles / Ops Toggles / Permissioning Toggles
+
 3.4 【今日阅读】https://www.youtube.com/watch?v=kPLGftyQ5ho&list=PLC2LZCNWKL9a7b7Ufx0ngo9xH_b8j9ZlA Functional Core, Imperative Shell
 
 3.3 【今日阅读】https://riffle.systems/essays/prelude/ We’re exploring a new way to manage data in apps by storing all app state—including the state of the UI—in a single reactive database. Instead of imperatively fetching data from the database, the user writes reactive queries that update with fresh results whenever their dependencies change.
