--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.6 【今日阅读】https://rushstack.io/ provide reusable tech for running large scale monorepos for the web
+
 3.5 【今日阅读】https://martinfowler.com/articles/feature-toggles.html Release Toggles / Experiment Toggles / Ops Toggles / Permissioning Toggles
 
 3.4 【今日阅读】https://www.youtube.com/watch?v=kPLGftyQ5ho&list=PLC2LZCNWKL9a7b7Ufx0ngo9xH_b8j9ZlA Functional Core, Imperative Shell
