--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.7 【今日阅读】https://lobste.rs/s/byssgg/editing_stuff_prod It was either "edit in prod" or endure DAY LONG development cycles: make a change, wait 24 hours, come back tomorrow, and try it again. That's how broken it was.
+
 3.6 【今日阅读】https://rushstack.io/ provide reusable tech for running large scale monorepos for the web
 
 3.5 【今日阅读】https://martinfowler.com/articles/feature-toggles.html Release Toggles / Experiment Toggles / Ops Toggles / Permissioning Toggles
