--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.10 【今日阅读】https://yoshuabengio.org/2022/03/05/generative-flow-networks/ 结构源自于最小化“复现现象的程序”，通过压缩节省消耗
+
 3.9 【今日阅读】https://www.dataorienteddesign.com/dodbook/ Data-Oriented design. The elusive destruction of object driven dogma. There are a lot of data-oriented talks out there, but for an intermediate programmer looking to avoid the pitfalls of the object-oriented mindset, it can be too hard to interpret and apply the lessons. This book is the perfect bridge between the advanced data-oriented material already out there, and the old ways of object-oriented programming. It sheds light on what Mike Acton means when he talks about everything is data and transforms. 
 
 3.8 【今日阅读】https://zhuanlan.zhihu.com/p/475789952 用DDD(领域驱动设计)和ADT(代数数据类型)提升代码质量
