--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.12 【今日阅读】https://github.com/microsoft/mimalloc first-class heaps: efficiently create and use multiple heaps to allocate across different regions. A heap can be destroyed at once instead of deallocating each object separately.
+
 3.11 【今日阅读】https://www.wave.com/en/blog/simple-architecture/ Wave is a $1.7B company with 70 engineers1 whose product is a CRUD app that adds and subtracts numbers. In keeping with this, our architecture is a standard CRUD app architecture, a Python monolith on top of Postgres. Starting with a simple architecture and solving problems in simple ways where possible has allowed us to scale to this size while engineers mostly focus on work that delivers value to users.
 
 3.10 【今日阅读】https://yoshuabengio.org/2022/03/05/generative-flow-networks/ 结构源自于最小化“复现现象的程序”，通过压缩节省消耗
