--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.14 【今日阅读】http://www.oilshell.org/blog/2022/03/backlog-arch.html Fine-grained static types, build-time composition, static linking, APIs, and version numbers ；Coarse-grained "waists", runtime composition, ABIs, IPC, and versionless protocols
+
 3.13 【今日阅读】https://github.com/fabianlindfors/reshape Reshape is an easy-to-use, zero-downtime schema migration tool for Postgres. It automatically handles complex migrations that would normally require downtime or manual multi-step changes. During a migration, Reshape ensures both the old and new schema are available at the same time, allowing you to gradually roll out your application. It will also perform all changes without excessive locking, avoiding downtime caused by blocking other queries. 
 
 3.12 【今日阅读】https://github.com/microsoft/mimalloc first-class heaps: efficiently create and use multiple heaps to allocate across different regions. A heap can be destroyed at once instead of deallocating each object separately.
