--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.16 【今日阅读】https://monorepo.tools/ Everything you need to know about monorepos, and the tools to build them.
+
 3.15 【今日阅读】https://blog.lawrencejones.dev/go-sum-type/ Hacking sum types with Go generics
 
 3.14 【今日阅读】http://www.oilshell.org/blog/2022/03/backlog-arch.html Fine-grained static types, build-time composition, static linking, APIs, and version numbers ；Coarse-grained "waists", runtime composition, ABIs, IPC, and versionless protocols
