--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.17 【今日阅读】https://dev.to/bytebodger/react-is-eating-itself-fga Outside of blogs and tutorial sites, you rarely see much code like above in "real" applications. And I don't mean just because the above example is small/simple. I mean, because React devs have been demonizing many of the simple concepts illustrated in this example. They keep picking at this basic framework until the result is hardly recognizable.
+
 3.16 【今日阅读】https://monorepo.tools/ Everything you need to know about monorepos, and the tools to build them.
 
 3.15 【今日阅读】https://blog.lawrencejones.dev/go-sum-type/ Hacking sum types with Go generics
