--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.18 【今日阅读】https://mitchellh.com/writing/contributing-to-complex-projects Become a User; Build the Project; Learn the Hot-Path Internals; Read and Reimplement Recent Commits ; Make a Bite-sized Change
+
 3.17 【今日阅读】https://dev.to/bytebodger/react-is-eating-itself-fga Outside of blogs and tutorial sites, you rarely see much code like above in "real" applications. And I don't mean just because the above example is small/simple. I mean, because React devs have been demonizing many of the simple concepts illustrated in this example. They keep picking at this basic framework until the result is hardly recognizable.
 
 3.16 【今日阅读】https://monorepo.tools/ Everything you need to know about monorepos, and the tools to build them.
