--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.21 【今日阅读】https://news.ycombinator.com/item?id=3101876 Steve's Google Platform rant https://gist.github.com/chitchcock/1281611
+
 3.20 【今日阅读】https://okmij.org/ftp/ML/generalization.html How OCaml type checker works -- or what polymorphism and garbage collection have in common
 
 3.19 【今日阅读】https://www.dreamsongs.com/Files/PatternsOfSoftware.pdf in memory of Christopher Alexander
