--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.24 【今日阅读】https://news.ycombinator.com/item?id=22090700 Dynamic type systems are not inherently more open
+
 3.23 【今日阅读】https://juejin.cn/post/7077359097032474631 Go 1.18 新特性多模块工作区教程-让多模块开发变得简单
 
 3.22 【今日阅读】https://lobste.rs/s/yz7yjv/penny_wise_cloud_foolish It’s actually been quite funny to see everything come full circle. A la carte pricing was a huge original selling point for cloud. Pay for what you use was seen as much more transparent, but that’s proven not to be the case since most orgs have no clue how much they use. Seeing more and more services pop up with flat monthly charges and how that’s now being claimed as more transparent than pay-as-you-go pricing has been an amusing 180.
