--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.25 【今日阅读】https://zhuanlan.zhihu.com/p/486693010 为什么真实世界的代码总是难以理解
+
 3.24 【今日阅读】https://news.ycombinator.com/item?id=22090700 Dynamic type systems are not inherently more open
 
 3.23 【今日阅读】https://juejin.cn/post/7077359097032474631 Go 1.18 新特性多模块工作区教程-让多模块开发变得简单
