--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.27 【今日阅读】https://www.morling.dev/blog/whats-in-a-good-error-message/  As software developers, we’ve all come across those annoying, not-so-useful error messages when using some library or framework: "Couldn’t parse config file", "Lacking permission for this operation", etc. Ok, ok, so something went wrong apparently; but what exactly? What config file? Which permissions? And what should you do about it? Error messages lacking this kind of information quickly create a feeling of frustration and helplessness.
+
 3.26 【今日阅读】https://machalliance.org/ The MACH Alliance presents and advocates for an open and best-of-breed enterprise technology ecosystem. The ecosystem technology is: Microservices based, API-first, Cloud-native SaaS and Headless.
 
 3.25 【今日阅读】https://zhuanlan.zhihu.com/p/486693010 为什么真实世界的代码总是难以理解
