--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+3.29 【今日阅读】https://www.pathsensitive.com/2022/03/abstraction-not-what-you-think-it-is.html In fact, Eric Elliott, author of Composing Software and Programming JavaScript Applications goes as far as to say “abstraction is the process of simplifying code by finding similarities between different parts of the code and extracting shared logic into a named component (such as a function, module, etc...)” — i.e.: that abstraction is anti-unification. He then goes on to claim "The secret to being 10x more productive is to gain a mastery of abstraction." That sounds pretty impressive for a process which was first automated in 1970.
+
+3.28 【今日阅读】https://zhuanlan.zhihu.com/p/463512291 《极简管理学》- 系统学习管理
+
 3.27 【今日阅读】https://www.morling.dev/blog/whats-in-a-good-error-message/  As software developers, we’ve all come across those annoying, not-so-useful error messages when using some library or framework: "Couldn’t parse config file", "Lacking permission for this operation", etc. Ok, ok, so something went wrong apparently; but what exactly? What config file? Which permissions? And what should you do about it? Error messages lacking this kind of information quickly create a feeling of frustration and helplessness.
 
 3.26 【今日阅读】https://machalliance.org/ The MACH Alliance presents and advocates for an open and best-of-breed enterprise technology ecosystem. The ecosystem technology is: Microservices based, API-first, Cloud-native SaaS and Headless.
