--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.30 【今日阅读】https://news.ycombinator.com/item?id=30822544 How to write a linter using tree-sitter in an hour
+
 3.29 【今日阅读】https://www.pathsensitive.com/2022/03/abstraction-not-what-you-think-it-is.html In fact, Eric Elliott, author of Composing Software and Programming JavaScript Applications goes as far as to say “abstraction is the process of simplifying code by finding similarities between different parts of the code and extracting shared logic into a named component (such as a function, module, etc...)” — i.e.: that abstraction is anti-unification. He then goes on to claim "The secret to being 10x more productive is to gain a mastery of abstraction." That sounds pretty impressive for a process which was first automated in 1970.
 
 3.28 【今日阅读】https://zhuanlan.zhihu.com/p/463512291 《极简管理学》- 系统学习管理
