--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.1 【今日阅读】https://psalm.dev/articles/php-or-type-safety-pick-any-two We’ve used the techniques above to improve the type coverage of our codebase at Vimeo since introducing Psalm. In 2015, before Psalm was introduced, about 74% of the codebase was well-typed. In 2019, about 90% of the codebase is. That increase has come even as we’ve roughly doubled the size of the codebase
+
 3.31 【今日阅读】https://stripe.com/blog/sorbet-stripes-type-checker-for-ruby Unfortunately we were starting to see Ruby come apart at the seams: new engineers found it hard to learn the codebase, and existing engineers were scared to make sweeping changes. Everyone faced a constant tradeoff: run the fast, local tests which might not catch many breakages, or run all the tests, even the slow ones. Ruby was becoming a source of friction more than a source of productivity.
 
 3.30 【今日阅读】https://news.ycombinator.com/item?id=30822544 How to write a linter using tree-sitter in an hour
