--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.4 【今日阅读】https://lobste.rs/s/wxqcul/project_with_single_11_000_line_code_file The project with a single 11,000-line code file
+
 4.3 【今日阅读】https://www.youtube.com/clip/UgkxWCEmMJFW0-TvSMzcMEAHZcpt2FsVXP65 a little copying is better than a little dependency
 
 4.2 【今日阅读】https://engineering.fb.com/2014/03/20/developer-tools/hack-a-new-programming-language-for-hhvm/ Every PHP programmer is familiar with day-to-day tasks that can be tricky or cumbersome. The code above is a great example of a common mistake where a method could unexpectedly be called on a null object, causing an error that wouldn’t be caught until runtime. Another example is a complex API, where developers may have a solid understanding of its semantics but still spend time looking up mundane method names in documentation.
