--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.6 【今日阅读】https://arxiv.org/abs/2108.13624 Towards Out-Of-Distribution Generalization: A Survey
+
 4.4 【今日阅读】https://lobste.rs/s/wxqcul/project_with_single_11_000_line_code_file The project with a single 11,000-line code file
 
 4.3 【今日阅读】https://www.youtube.com/clip/UgkxWCEmMJFW0-TvSMzcMEAHZcpt2FsVXP65 a little copying is better than a little dependency
