--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.8 【今日阅读】https://caseymuratori.com/blog_0024 I think the Granny 2.x API went a long way towards demonstrating how an API can be thoughtfully designed to allow smoothly integrating one complex system with another in a way that doesn’t sacrifice performance or squander resources.
+
 4.7 【今日阅读】https://victor.4devs.io/en/architecture/integration-database.html Integration database and why you should avoid it
 
 4.6 【今日阅读】https://arxiv.org/abs/2108.13624 Towards Out-Of-Distribution Generalization: A Survey
