--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,9 @@
+4.11 【今日阅读】https://mp.weixin.qq.com/s/ZtMGKK0F2-jtkK0NBdmguQ 不稳定测试用例是自动化测试的主要挑战之一（Part One）
+
+4.10 【今日阅读】https://gavinhoward.com/2022/04/i-believe-zig-has-function-colors/   The title is the thesis: the Zig programming language has function colors. And in the rest of this post, I will prove that and try to explain what it means for programmers using Zig.
+
+4.9 【今日阅读】https://logicmag.io/clouds/agile-and-the-long-crisis-of-software/ a long-running wrestling match between what managers want software development to be and what it really is, as practiced by the workers who write the code. Time and again, organizations have sought to contain software’s most troublesome tendencies—its habit of sprawling beyond timelines and measurable goals—by introducing new management styles.
+
 4.8 【今日阅读】https://caseymuratori.com/blog_0024 I think the Granny 2.x API went a long way towards demonstrating how an API can be thoughtfully designed to allow smoothly integrating one complex system with another in a way that doesn’t sacrifice performance or squander resources.
 
 4.7 【今日阅读】https://victor.4devs.io/en/architecture/integration-database.html Integration database and why you should avoid it
