--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.12 【今日阅读】https://kislayverma.com/organizations/reduce-collaboration-by-good-design/ What if we think of all software work as building a product? My customers, who happen to be other engineers in this context, should be able to explore and understand my product, play around with it, and then finally sign up for it with minimum human intervention.
+
 4.11 【今日阅读】https://mp.weixin.qq.com/s/ZtMGKK0F2-jtkK0NBdmguQ 不稳定测试用例是自动化测试的主要挑战之一（Part One）
 
 4.10 【今日阅读】https://gavinhoward.com/2022/04/i-believe-zig-has-function-colors/   The title is the thesis: the Zig programming language has function colors. And in the rest of this post, I will prove that and try to explain what it means for programmers using Zig.
