--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.14 【今日阅读】https://bytebase.com/blog/what-is-database-schema-drift Database schema drift or just schema drift is the case where the actual schema in the live database (the actual state) is different from the source of truth (the desired state).
+
 4.13 【今日阅读】https://htmx.org/essays/locality-of-behaviour/ The primary feature for easy maintenance is locality: Locality is that characteristic of source code that enables a programmer to understand that source by looking at only a small portion of it.
 
 4.12 【今日阅读】https://kislayverma.com/organizations/reduce-collaboration-by-good-design/ What if we think of all software work as building a product? My customers, who happen to be other engineers in this context, should be able to explore and understand my product, play around with it, and then finally sign up for it with minimum human intervention.
